Colaboratory を使用して作成しました

--- a/colaboratory_chainer_PointNetAE.ipynb
+++ b/colaboratory_chainer_PointNetAE.ipynb
@@ -28,42 +28,23 @@
     },
     {
       "metadata": {
-        "id": "S_r0No-5RecP",
-        "colab_type": "code",
-        "outputId": "05001997-6019-429e-bdb9-0ee9487b9efd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 289
-        }
+        "id": "lCvNfV18EVFd",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!python chainer-pointnet-autoencoder/train.py --gpu=0"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "save args to result/args.json\n",
-            "Train PointNet-AutoEncoder model... trans=1 use_bn=1 dropout=0\n",
-            "Dataset setting...\n",
-            "Traceback (most recent call last):\n",
-            "  File \"chainer-pointnet-autoencoder/train.py\", line 160, in <module>\n",
-            "    main()\n",
-            "  File \"chainer-pointnet-autoencoder/train.py\", line 92, in main\n",
-            "    BASE_DIR, 'data/shapenetcore_partanno_segmentation_benchmark_v0'), split=\"train\", class_choice=[class_choice])]))\n",
-            "  File \"/content/chainer-pointnet-autoencoder/part_dataset.py\", line 98, in __init__\n",
-            "    seg = np.loadtxt(fp[1]).astype(np.int64) - 1\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/numpy/lib/npyio.py\", line 1092, in loadtxt\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/numpy/lib/npyio.py\", line 1008, in read_data\n",
-            "    vals = split_line(line)\n",
-            "  File \"/usr/local/lib/python3.6/dist-packages/numpy/lib/npyio.py\", line 987, in split_line\n",
-            "    line = regex_comments.split(line, maxsplit=1)[0]\n",
-            "KeyboardInterrupt\n"
-          ],
-          "name": "stdout"
-        }
+        "# Colaboratory Chainer-PointNetAE"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "NCiVzb33E_At",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 1. GPUの設定&確認\n",
+        "編集 -> ノートブックの設定で、ランタイムのタイプはpython3、ハードウェアアクセラレータはGPUにする。"
       ]
     },
     {
@@ -87,6 +68,16 @@
     },
     {
       "metadata": {
+        "id": "rJZaIIaUF7wY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 2. AEモデル&ライブラリのインストール"
+      ]
+    },
+    {
+      "metadata": {
         "id": "2kERVc0yy3SK",
         "colab_type": "code",
         "colab": {}
@@ -106,6 +97,16 @@
     },
     {
       "metadata": {
+        "id": "-FJyYm0zESM0",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 3. データセットのインストール"
+      ]
+    },
+    {
+      "metadata": {
         "id": "a1Xlsz844AF0",
         "colab_type": "code",
         "colab": {}
@@ -121,13 +122,23 @@
     },
     {
       "metadata": {
-        "id": "W0TsfJEOG72D",
+        "id": "9iS25F_tENCL",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## 4. 実行"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "S_r0No-5RecP",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        ""
+        "!python chainer-pointnet-autoencoder/train.py --gpu=0"
       ],
       "execution_count": 0,
       "outputs": []
